# CS-semester-3

./: CS-semester-3.sln  config.json  field.json  pyproject.toml  users.txt
Assets/: config.json
Assets/Model/: Config.cs  IConfig.cs  IScene.cs  Scene.cs
Assets/Model/Effects/: AllEffects.cs  BallSpeedUpEffect.cs  IEffect.cs  PlayerSpeedUpEffect.cs
Assets/Model/Entities/: Ball.cs  Brick.cs  Interfaces.cs  Player.cs
Assets/Model/Factories/: EffectFactory.cs  FieldFactory.cs  IEffectFactory.cs  IFieldFactory.cs
Assets/Model/Storage/: ColorConverter.cs  ConfigRepository.cs  DataManager.cs  FieldRepository.cs  IRepository.cs  (+1 more)
Assets/Prefabs/: Ball.prefab  Brick.prefab  Effect.prefab  Player.prefab
Assets/Scenes/: SalutationScene.unity  SampleScene.unity  VictoryScene.unity
Assets/Scripts/: BallScript.cs  BrickScript.cs  EffectScript.cs  Game.cs  PlayerScript.cs  SalutationSceneScript.cs  SceneScript.cs  VictorySceneScript.cs  jjj.physicsMaterial2D
Assets/Sounds/: Запись.m4a
CS-semester-3/: CS-semester-3.csproj  Calculator.cs  Date.cs  Disk.cs  Page.cs  Partition.cs  Password.cs  Program.cs  StringExtension.cs  VirtualMemory.cs
CS-semester-3.Tests/: CS-semester-3.Tests.csproj  DiskTests.cs  PartitionTests.cs
CS-semester-3/part1/: Extensions.cs  Password.cs  TestFunction.cs
CS-semester-3/part2/: Official.cs  PartTimeStudent.cs  Person.cs  Programmer.cs  Pupil.cs  Student.cs  TestFunction2.cs  Turner.cs  Worker.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
src/: loginWindow.py  main.py  menuWindow.py  utils.py
